--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,10 +3,25 @@
 @import "./base/vars";
 @import "./base/base";
 // Blocks
+@import "./blocks/section";
 @import "./blocks/header";
 @import "./blocks/modal";
 @import "./blocks/menu";
 @import "./blocks/menu-nav";
+@import "./blocks/dropdown-toggle";
+@import "./blocks/header-search";
+@import "./blocks/header-contacts";
+@import "./blocks/footer";
+@import "./blocks/footer-menu";
+@import "./blocks/footer-grid";
+@import "./blocks/footer-contacts";
+@import "./blocks/info-list";
+@import "./blocks/bottom-menu";
+@import "./blocks/social-list";
+@import "./blocks/footer-map";
+@import "./blocks/banner";
+@import "./blocks/banner-btn";
+@import "./blocks/swiper-banner";
 @import "./blocks/btn";
 // Custom
 @import "./blocks/custom-checkbox";
