--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,8 +2,13 @@
 
 html,
 body {
-    font-family: '';
+    font-family: $font-family;
     scroll-behavior: smooth;
+    background: #F8F8F8;
+    
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
 }
 
 // Заголовки
