--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,36 +1,105 @@
 .header {
     position: relative;
-    background: #fff;
 
     &__wrapper {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 29px 0;
-        z-index: 2;
-
-        @media(max-width: $breakpoint768) {
-            padding: 20px 0;
-        }
-        @media(max-width: $breakpoint480) {
-            padding: 16px 0;
-        }
-    }
-
-    &__contacts {
         display: flex;
         flex-direction: column;
+
+        padding: 12px 0;
+        z-index: 2;
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        padding-bottom: 8px;
+        border-bottom: 1px solid #D9D9D9;
+
+        &-region {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            
+            &__name {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 130%;
+                color: #323232;
+            }
+        }
+
+        &-phone {
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+
+            &__title {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 130%;
+                color: #9a9a98;
+            }
+            &__link {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 130%;
+                color: $black;
+
+                &::before {
+                    content: url(../assets/img/icons/i-phone.svg);
+                    height: 17px;
+                }
+            }
+        }
+    }
+
+    &__bottom {
+        display: flex;
         align-items: end;
-    }
-    &__mail {
+        justify-content: space-between;
+        column-gap: 24px;
 
-    }
-    &__phone {
+        padding-top: 9px;
 
+        &-left {
+            display: flex;
+            align-items: end;
+
+            &__description {
+                position: relative;
+                padding-left: 21px;
+
+                & > p {
+                    font-weight: 600;
+                    font-size: 14px;
+                    line-height: 110%;
+                    text-transform: uppercase;
+                    color: $black;
+
+                    width: 135px;
+                }
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 10px;
+                    top: 0;
+
+                    height: 100%;
+                    width: 1px;
+                    background: $black;
+                }
+            }
+        }
     }
 }
 
 .logo {
-    
+    flex-shrink: 0;
 }
