--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,9 +1,9 @@
 // color
 $main-color: #FF6F00;
 $black: #323232;
-$accent-color: #D4E1BD;
-$secondary-color: #11332A; 
-$main-text: #3A3737;
+
+$bg-color: #f8f8f8;
+$text-color: #9a9a98;  
 
 // breakpoint 
 $breakpoint1440: 1440 + px;
