--- a/scss/blocks/_accordion.scss
+++ b/scss/blocks/_accordion.scss
@@ -24,7 +24,7 @@
         font-weight: 600;
         font-size: 28px;
         line-height: 130%;
-        color: $main-text;
+        color: $text-color;
         pointer-events: none;
 
         @media(max-width: $breakpoint768) {
@@ -60,11 +60,11 @@
         width: 36px;
         height: 36px;
         border-radius: 50%;
-        background-color: $secondary-color;
+
         @media(max-width: $breakpoint768) {
             width: 24px;
             height: 24px;
-        }
+        } 
 
         &.open {
             background-color: $main-color;
