--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -75,7 +75,7 @@
         font-weight: 500;
         font-size: 20px;
         line-height: 150%;
-        color: $main-text;
+        color: $text-color;
 
         @media(max-width: $breakpoint1024) {
             margin-top: 10px;
