--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -1,3 +1,17 @@
 .banner-section {
     padding-bottom: 56px;
 }
+
+.advantages-section {
+    padding: 54px 0;
+
+    background: url(../assets/img/bg/adv-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.main-catalog-section {
+    padding-top: 52px;
+    padding-bottom: 84px;
+}
