--- a/scss/blocks/_toggle.scss
+++ b/scss/blocks/_toggle.scss
@@ -16,7 +16,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 130%;
-        color: $main-text;
+        color: $text-color;
         border: 1px solid rgb(232, 232, 232);
         border-radius: 12px;
         cursor: pointer;
