--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,11 @@
 @import "./blocks/banner";
 @import "./blocks/banner-btn";
 @import "./blocks/swiper-banner";
+@import "./blocks/advantages";
+@import "./blocks/main-catalog";
+@import "./blocks/main-catalog-card";
+@import "./blocks/properties-list";
+@import "./blocks/parameters-list";
 @import "./blocks/btn";
 // Custom
 @import "./blocks/custom-checkbox";
