--- a/css/main.css
+++ b/css/main.css
@@ -108,11 +108,13 @@ h1 {
 }
 
 h2 {
-  color: #FF6F00;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 130%;
+  color: #323232;
 }
-
-h3 {
-  color: #3A3737;
+h2 span {
+  color: #FF6F00;
 }
 
 .container {
@@ -121,12 +123,7 @@ h3 {
   margin: 0 auto;
 }
 .container__inner {
-  margin-top: 40px;
-}
-@media (max-width: 768px) {
-  .container__inner {
-    margin-top: 24px;
-  }
+  margin-top: 60px;
 }
 @media (max-width: 1248px) {
   .container {
@@ -168,6 +165,19 @@ h3 {
 
 .banner-section {
   padding-bottom: 56px;
+}
+
+.advantages-section {
+  padding: 54px 0;
+  background: url(../assets/img/bg/adv-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.main-catalog-section {
+  padding-top: 52px;
+  padding-bottom: 84px;
 }
 
 .header {
@@ -373,7 +383,7 @@ h3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 150%;
-  color: #3A3737;
+  color: #9a9a98;
 }
 @media (max-width: 1024px) {
   .modal__text {
@@ -1293,6 +1303,208 @@ h3 {
   height: auto;
 }
 
+.advantages__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 28px;
+}
+.advantages__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 14px;
+  min-width: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.advantages__item-icon {
+  max-height: 61px;
+}
+.advantages__item-text {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+
+.main-catalog__wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 28px;
+}
+
+.main-catalog-card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid #a3a3a1;
+  border-radius: 30px;
+  background: #f0f0ef;
+  overflow: hidden;
+}
+.main-catalog-card__top {
+  position: relative;
+  height: 210px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: height 0.3s;
+  transition: height 0.3s;
+}
+.main-catalog-card__top-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: -6px;
+  z-index: 2;
+}
+.main-catalog-card__description {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  padding: 8px 20px 30px 20px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  -webkit-box-shadow: 0 1px 13px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0 1px 13px 0 rgba(0, 0, 0, 0.25);
+  background: #f8f8f8;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.main-catalog-card__description-top {
+  min-height: 62px;
+  text-align: center;
+}
+.main-catalog-card__description-name {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 130%;
+  text-decoration: underline !important;
+  text-underline-offset: 5px;
+  color: #323232;
+}
+.main-catalog-card.active .main-catalog-card__top {
+  height: 130px;
+}
+.main-catalog-card.active .main-catalog-card__top-img {
+  position: absolute;
+  bottom: -6px;
+  right: -10%;
+}
+.main-catalog-card.active .main-catalog-card__description {
+  padding-top: 12px;
+}
+.main-catalog-card.active .main-catalog-card__description-top {
+  display: none;
+}
+
+.properties-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 12px;
+}
+.properties-list__item-toggle {
+  padding-bottom: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  border-bottom: 1px solid #9A9A98;
+}
+.properties-list__item-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+  pointer-events: none;
+}
+.properties-list__item-icon {
+  fill: #9A9A98;
+  pointer-events: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.properties-list__item-body {
+  display: grid;
+  grid-template-rows: 0fr;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.properties-list__item.active .properties-list__item-text {
+  color: #FF6F00;
+}
+.properties-list__item.active .properties-list__item-icon {
+  fill: #FF6F00;
+  rotate: 180deg;
+}
+.properties-list__item.active .properties-list__item-body {
+  grid-template-rows: 1fr;
+}
+.properties-list__item.active .parameters-list {
+  margin-top: 20px;
+}
+
+.parameters-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 12px;
+  min-height: 0;
+}
+.parameters-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.parameters-list__item-link {
+  padding: 4px 12px;
+  border: 1px solid #FF6F00;
+  border-radius: 12px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: #FF6F00;
+}
+
 .custom-checkbox {
   display: block;
   margin: 0;
@@ -1333,7 +1545,7 @@ h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  color: #3A3737;
+  color: #9a9a98;
 }
 @media (max-width: 1024px) {
   .custom-checkbox span {
@@ -1361,7 +1573,7 @@ h3 {
   position: absolute;
   left: 0;
   top: 0;
-  border: 1px solid #3A3737;
+  border: 1px solid #9a9a98;
   border-radius: 6px;
 }
 
@@ -1419,7 +1631,7 @@ h3 {
   font-weight: 400;
   font-size: 16px;
   line-height: 130%;
-  color: #3A3737;
+  color: #9a9a98;
   border: 1px solid rgb(232, 232, 232);
   border-radius: 12px;
   cursor: pointer;
@@ -1478,7 +1690,7 @@ h3 {
   font-weight: 600;
   font-size: 28px;
   line-height: 130%;
-  color: #3A3737;
+  color: #9a9a98;
   pointer-events: none;
 }
 @media (max-width: 768px) {
@@ -1519,7 +1731,6 @@ h3 {
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  background-color: #11332A;
 }
 @media (max-width: 768px) {
   .accordion-list__btn {
