--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,7 +27,17 @@
 @import "./blocks/main-catalog-card";
 @import "./blocks/properties-list";
 @import "./blocks/parameters-list";
-@import "./blocks/btn";
+@import "./blocks/about";
+@import "./blocks/consult";
+@import "./blocks/consult-form";
+@import "./blocks/leasing";
+@import "./blocks/leasing-banks";
+@import "./blocks/swiper-products";
+@import "./blocks/swiper-groups";
+@import "./blocks/swiper-counter";
+@import "./blocks/products-card";
+@import "./blocks/properties-card";
+@import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
 @import "./blocks/custom-radio";
