--- a/css/main.css
+++ b/css/main.css
@@ -107,14 +107,22 @@ h1 {
   color: #FF6F00;
 }
 
-h2 {
+.second-title {
   font-weight: 800;
-  font-size: 48px;
   line-height: 130%;
   color: #323232;
 }
-h2 span {
+.second-title span {
   color: #FF6F00;
+}
+.second-title--lg {
+  font-size: 48px;
+}
+.second-title--md {
+  font-size: 40px;
+}
+.second-title--sm {
+  font-size: 36px;
 }
 
 .container {
@@ -178,6 +186,19 @@ h2 span {
 .main-catalog-section {
   padding-top: 52px;
   padding-bottom: 84px;
+}
+
+.consult-section {
+  margin-top: 50px;
+  padding: 36px 50px;
+  background: url(../assets/img/bg/consult-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.leaders-section {
+  padding: 80px 50px;
 }
 
 .header {
@@ -1328,7 +1349,7 @@ h2 span {
   max-height: 61px;
 }
 .advantages__item-text {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 20px;
   line-height: 130%;
   color: #9a9a98;
@@ -1503,6 +1524,527 @@ h2 span {
   font-size: 16px;
   line-height: 130%;
   color: #FF6F00;
+}
+
+.about__top {
+  max-width: 820px;
+}
+.about__top-title {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 130%;
+  color: #323232;
+}
+.about__top-text {
+  margin-top: 10px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.about__wrapper {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 390px 320px 350px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.about__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.about__item:not(:first-child) {
+  margin-top: calc(var(--pos) * 80px);
+}
+.about__item-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #FF6F00;
+}
+.about__item-name::before {
+  content: url(../assets/img/icons/i-arrowUp.png);
+}
+.about__item-subtitle {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 130%;
+  color: #000;
+}
+.about__item-text {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.about__bottom {
+  margin-top: -40px;
+  position: relative;
+}
+.about__bottom::before {
+  position: absolute;
+  bottom: 60px;
+  content: "";
+  background-image: url(../assets/img/bg/about-bg.png);
+  background-position: center;
+  width: 100%;
+  height: 195px;
+  z-index: 1;
+}
+.about__bottom-img {
+  position: relative;
+  z-index: 2;
+}
+
+.consult__top {
+  max-width: 720px;
+}
+.consult__top-title {
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 130%;
+  color: #323232;
+}
+.consult__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.consult__left {
+  margin-top: 25px;
+  width: 460px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.consult__left-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.consult__img {
+  margin-top: -76px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+.consult__img img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.consult-form {
+  margin-top: 24px;
+}
+.consult-form__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 18px;
+}
+.consult-form__input {
+  padding: 10px 24px;
+  background-color: #fff;
+}
+.consult-form__bottom {
+  margin-top: 38px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.consult-form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+.consult-form__btn:hover .consult-form__btn-icon {
+  background: transparent;
+  border: 1px solid #FF6F00;
+}
+.consult-form__btn:hover .consult-form__btn-icon svg {
+  fill: #FF6F00;
+  -webkit-transform: translate(3px, -3px);
+          transform: translate(3px, -3px);
+}
+.consult-form__btn-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background: #FF6F00;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.consult-form__btn-icon svg {
+  fill: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.consult-form__btn-text {
+  font-weight: 800;
+  font-size: 16px;
+  color: #323232;
+}
+.consult-form__confirm {
+  max-width: 220px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+
+.leasing {
+  padding: 38px 0 48px;
+}
+.leasing__top-title {
+  font-weight: 800;
+  font-size: 48px;
+  letter-spacing: 0.05em;
+  color: #000;
+}
+.leasing__top-title span:nth-of-type(1) {
+  color: #FF6F00;
+}
+.leasing__top-title span:nth-of-type(2) {
+  letter-spacing: 0.05em;
+  font-weight: 600;
+  font-size: 24px;
+  color: #323232;
+}
+.leasing__bottom {
+  margin-top: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 40px;
+}
+.leasing__bottom-text {
+  max-width: 740px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.leasing__bottom-btn {
+  font-weight: 800;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+  padding: 20px 26px;
+  background: #FF6F00;
+  border-radius: 25px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.leasing-banks {
+  padding: 50px 0;
+  background: url(../assets/img/bg/f-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.leasing-banks__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  gap: 40px;
+}
+.leasing-banks__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #fff;
+  border: 1px solid #9a9a98;
+  border-radius: 16px;
+  padding: 0 20px;
+  height: 53px;
+}
+
+.swiper-products__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.swiper-products__top-title {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #323232;
+}
+.swiper-products__top-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 25px;
+}
+.swiper-products__wrapper {
+  margin-top: 40px;
+}
+
+.swiper-groups {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+.swiper-groups__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid rgba(154, 154, 152, 0.89);
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.swiper-groups__btn:hover {
+  background: rgba(255, 112, 0, 0.3);
+  border-color: #FF6F00;
+}
+.swiper-groups__btn:hover svg {
+  fill: #FF6F00;
+}
+.swiper-groups__btn:hover.swiper-groups-next svg {
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+}
+.swiper-groups__btn:hover.swiper-groups-prev svg {
+  -webkit-transform: translateX(-3px);
+          transform: translateX(-3px);
+}
+.swiper-groups__btn svg {
+  fill: #323232;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.swiper-counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 4px;
+}
+.swiper-counter__current {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 1;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000;
+}
+.swiper-counter__total {
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #9a9a98;
+}
+
+.products-card {
+  border: 1px solid #d1d1d0;
+  background: #f0f0ef;
+  padding: 8px 10px 28px 8px;
+}
+.products-card__top {
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+.products-card__top img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  display: none;
+}
+.products-card__info {
+  margin-top: 24px;
+}
+.products-card__info-title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 130%;
+  color: #323232;
+}
+.products-card__info-desc {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.products-card__info-price-block__price {
+  margin-top: 16px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 130%;
+  color: #323232;
+}
+.products-card__info-price-block__btn {
+  display: none;
+  margin-top: 10px;
+  background: #FF6F00;
+  border-radius: 14px;
+  padding: 10px 24px;
+  font-weight: 600;
+  font-size: 16px;
+  color: #f8f8f8;
+}
+
+.properties-card {
+  overflow-y: scroll;
+  height: inherit;
+  width: 100%;
+}
+.properties-card__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 18px;
+}
+.properties-card__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.properties-card__item-title {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 120%;
+  color: #9a9a98;
+}
+.properties-card__item-value {
+  font-weight: 600;
+  font-size: 16px;
+  color: #323232;
+}
+
+.input {
+  border: 1px solid #a3a3a1;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.input::-webkit-input-placeholder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.input::-moz-placeholder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.input:-ms-input-placeholder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.input::-ms-input-placeholder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.input::placeholder {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
 }
 
 .custom-checkbox {
