--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -15,3 +15,21 @@
     padding-top: 52px;
     padding-bottom: 84px;
 }
+
+.about-section {
+
+}
+
+.consult-section {
+    margin-top: 50px;
+    padding: 36px 50px;
+
+    background: url(../assets/img/bg/consult-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.leaders-section {
+    padding: 80px 50px;
+}
