--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,6 +37,8 @@
 @import "./blocks/swiper-counter";
 @import "./blocks/products-card";
 @import "./blocks/properties-card";
+@import "./blocks/simplebar-scrollbar";
+@import "./blocks/fast-view-btn";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
