--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,6 +9,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100dvh;
+
+    scrollbar-gutter: stable;
 }
 
 // Заголовки
@@ -26,9 +28,23 @@ h1 {
 
     &--lg {
         font-size: 48px;
+
+        @media(max-width: $breakpoint768) {
+            font-size: 44px;
+        }
+        @media(max-width: $breakpoint480) {
+            font-size: 40px;
+        }
     }
     &--md {
         font-size: 40px;
+
+        @media(max-width: $breakpoint768) {
+            font-size: 36px;
+        }
+        @media(max-width: $breakpoint480) {
+            font-size: 32px;
+        }
     }
     &--sm {
         font-size: 36px;
@@ -47,6 +63,9 @@ h3 {
     &__inner {
         margin-top: 60px;
 
+        @media(max-width: $breakpoint768) {
+            margin-top: 32px;
+        }
     }
 
     @media(max-width: $container-width) {
