--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -7,6 +7,10 @@
 
         padding: 12px 0;
         z-index: 2;
+
+        @media(max-width: $breakpoint992) {
+            padding: 9px 0;
+        }
     }
 
     &__top {
@@ -16,6 +20,10 @@
 
         padding-bottom: 8px;
         border-bottom: 1px solid #D9D9D9;
+
+        @media(max-width: $breakpoint992) {
+            display: none;
+        }
 
         &-region {
             display: flex;
@@ -67,6 +75,12 @@
 
         padding-top: 9px;
 
+        @media(max-width: $breakpoint992) {
+            padding-top: 0;
+
+            align-items: center;
+        }
+
         &-left {
             display: flex;
             align-items: end;
@@ -74,6 +88,10 @@
             &__description {
                 position: relative;
                 padding-left: 21px;
+
+                @media(max-width: $breakpoint480) {
+                    padding-left: 17px;
+                }
 
                 & > p {
                     font-weight: 600;
@@ -83,6 +101,14 @@
                     color: $black;
 
                     width: 135px;
+
+                    @media(max-width: $breakpoint992) {
+                        font-size: 12px;
+                    }
+                    @media(max-width: $breakpoint480) {
+                        font-size: 10px;
+                        width: 100px;
+                    }
                 }
 
                 &::before {
@@ -102,4 +128,11 @@
 
 .logo {
     flex-shrink: 0;
+
+    @media(max-width: $breakpoint992) {
+        width: 65px;
+    }
+    @media(max-width: $breakpoint480) {
+        width: 60px;
+    }
 }
