--- a/scss/blocks/_leasing.scss
+++ b/scss/blocks/_leasing.scss
@@ -1,5 +1,9 @@
 .leasing {
     padding: 38px 0 48px;
+
+    @media(max-width: $breakpoint480) {
+        padding: 28px 0;
+    }
     
     &__top {
 
@@ -8,6 +12,19 @@
             font-size: 48px;
             letter-spacing: 0.05em;
             color: #000;
+
+            @media(max-width: $breakpoint1248) {
+                line-height: 1.2;
+            }
+            @media(max-width: $breakpoint768) {
+                font-size: 44px;
+            }
+            @media(max-width: $breakpoint480) {
+                font-size: 40px;
+            }
+            @media(max-width: $breakpoint375) {
+                font-size: 34px;
+            }
 
             & span:nth-of-type(1) {
                 color: $main-color;
@@ -18,6 +35,19 @@
                 font-weight: 600;
                 font-size: 24px;
                 color: $black;
+
+                @media(max-width: $breakpoint1248) {
+                    margin-top: 8px;
+
+                    display: block;
+                    line-height: 1.2;
+                }
+                @media(max-width: $breakpoint768) {
+                    font-size: 22px;
+                }
+                @media(max-width: $breakpoint480) {
+                    font-size: 20px;
+                }
             }
         }
     }
@@ -26,7 +56,14 @@
 
         display: flex;
         justify-content: space-between;
-        gap: 40px;
+        gap: 20px;
+
+        @media(max-width: $breakpoint992) {
+            flex-direction: column;
+        }
+        @media(max-width: $breakpoint768) {
+            margin-top: 8px;
+        }
 
         &-text {
             max-width: 740px;
@@ -35,17 +72,53 @@
             font-size: 20px;
             line-height: 130%;
             color: $text-color;
-        }
-        &-btn {
-            font-weight: 800;
-            font-size: 20px;
-            text-align: center;
-            color: #fff;
 
-            padding: 20px 26px;
-            background: $main-color;
-            border-radius: 25px;
-            height: fit-content;
+            @media(max-width: $breakpoint768) {
+                font-size: 18px;
+            }
+            @media(max-width: $breakpoint480) {
+                font-size: 16px;
+            }
+        }
+    }
+    &__btn {
+        font-weight: 800;
+        font-size: 20px;
+        text-align: center;
+        color: #fff;
+
+        padding: 20px 26px;
+        background: $main-color;
+        border-radius: 25px;
+        
+        height: fit-content;
+        width: fit-content;
+
+        flex-shrink: 0;
+
+        @media(max-width: $breakpoint480) {
+            font-size: 16px;
+
+            padding: 18px 20px;
+            border-radius: 20px;
+        }
+
+        &--desktop {
+            @media(max-width: $breakpoint768) {
+                display: none;
+            }
+        }
+        &--mobile {
+            display: none;
+
+            @media(max-width: $breakpoint768) {
+                margin: 40px auto 0;
+
+                display: block;
+            }
+            @media(max-width: $breakpoint480) {
+                margin-top: 28px;
+            }
         }
     }
 }
