--- a/scss/blocks/_main-catalog.scss
+++ b/scss/blocks/_main-catalog.scss
@@ -2,7 +2,15 @@
 
     &__wrapper {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
         gap: 28px;
+
+        @media(max-width: $breakpoint992) {
+            grid-template-columns: repeat(2, auto);
+            justify-content: center;
+        }
+        @media(max-width: $breakpoint660) {
+            grid-template-columns: unset;
+        }
     }
 }
