--- a/scss/blocks/_products-card.scss
+++ b/scss/blocks/_products-card.scss
@@ -3,16 +3,19 @@
     background: #f0f0ef;
     padding: 8px 10px 28px 8px;
 
+    overflow: hidden;
+
     &__top {
+        position: relative;
         height: 200px;
 
         display: flex;
         align-items: end;
-        // justify-content: center;
+        justify-content: center;
 
         & img {
             object-fit: contain;
-            display: none;
+            transition: opacity .3s;
         }
     }
     &__info {
@@ -23,18 +26,29 @@
             font-size: 20px;
             line-height: 130%;
             color: $black;
+
+            transition: color .2s;
+
+            &:hover {
+                color: $main-color;
+            }
         }
         &-desc {
-            font-weight: 600;
+            font-weight: 500;
             font-size: 16px;
             line-height: 130%;
             color: $text-color;
         }
 
         &-price-block {
+            margin-top: 10px;
+            height: 39px;
+
+            display: flex;
+            align-items: end;
+            position: relative;
 
             &__price {
-                margin-top: 16px;
 
                 font-weight: 700;
                 font-size: 20px;
@@ -43,31 +57,45 @@
             }
             &__btn {
                 display: none;
-                margin-top: 10px;
 
                 background: $main-color;
                 border-radius: 14px;
                 padding: 10px 24px;
 
+                border: 1px solid $main-color;
                 font-weight: 600;
                 font-size: 16px;
                 color: #f8f8f8;
+                transition: all .3s;
+
+                &:hover {
+                    color: $main-color;
+                    background: transparent;
+                }
             }
         }
     }
 
-    // &:hover {
+    &:hover {
+        & .products-card__top {
 
-    //     & .products-card__top {
-    //         align-items: unset;
-    //         justify-content: unset;
-
-    //         &-img {
-    //             display: none;
-    //         } 
-    //     }
-    //     & .properties-card {
-    //         display: block;
-    //     }
-    // }
+            &-img {
+                opacity: 0;
+            } 
+        }
+        & .properties-card {
+            transform: translateX(0);
+        }
+        & .products-card__info-price-block {
+            &__price {
+                display: none;
+            }
+            &__btn {
+                display: block;
+            }
+        }
+        & .fast-view-btn {
+            opacity: 1;
+        }
+    }
 }
